@@ -3,6 +3,7 @@ package com.example.firstproject.services;
 import com.example.firstproject.entities.CompteEntity;
 import com.example.firstproject.entities.OperationCompteEntity;
 import com.example.firstproject.entities.TypeOperation;
+import com.example.firstproject.exceptions.IncorrectOperationException;
 import com.example.firstproject.exceptions.RessourceAlreadyExistException;
 import com.example.firstproject.exceptions.RessourceNotFoundException;
 import com.example.firstproject.exceptions.RetraitImpossibleException;
@@ -18,14 +19,11 @@ import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.springframework.boot.test.context.SpringBootTest;
 
-import java.sql.Array;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import static com.example.firstproject.utils.ResourceTestUtils.getCompte;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 
 @SpringBootTest
 class BankServiceImplTest {
@@ -38,15 +36,20 @@ class BankServiceImplTest {
     @Mock
     EntityDtoMapper mapper;
 
+    private CompteDto compteDto;
+    private CompteEntity compteEntity;
+    private OperationCompteEntity operationCompteEntity;
+
     @BeforeEach
     void setUp() {
         bankService = new BankServiceImpl(compteRepository, mapper);
+        compteDto = ResourceTestUtils.getCompte();
+        compteEntity = ResourceTestUtils.getCompteEntity();
+        operationCompteEntity = ResourceTestUtils.getOperationCompteEntity();
     }
 
     @Test
     void creerCompteTest() {
-        CompteEntity compteEntity = ResourceTestUtils.getCompteEntity();
-        OperationCompteEntity operationCompteEntity = ResourceTestUtils.getOperationCompteEntity();
 
         Mockito.when(compteRepository.findById(Mockito.anyString())).thenReturn(Optional.empty());
         Mockito.when(compteRepository.save(Mockito.any())).thenReturn(compteEntity);
@@ -55,7 +58,7 @@ class BankServiceImplTest {
         OperationCompteDto operationCompteDto = ResourceTestUtils.getOperationCompteDto();
 
         Mockito.when(mapper.toOperationCompteDto(Mockito.any())).thenReturn(operationCompteDto);
-        Mockito.when(mapper.toCompteDto(Mockito.any())).thenReturn(ResourceTestUtils.getCompte());
+        Mockito.when(mapper.toCompteDto(Mockito.any())).thenReturn(compteDto);
         Mockito.when(mapper.toCompteEntity(Mockito.any())).thenReturn(compteEntity);
 
         CompteDto reponse = bankService.creerCompte(getCompte());
@@ -68,18 +71,19 @@ class BankServiceImplTest {
 
     @Test
     void creerCompteQuiExisteDejaRenvoieException() {
-        Mockito.when(compteRepository.findById(Mockito.anyString())).thenReturn(Optional.of(ResourceTestUtils.getCompteEntity()));
-        Mockito.when(mapper.toCompteDto(Mockito.any())).thenReturn(ResourceTestUtils.getCompte());
-        Mockito.when(mapper.toCompteEntity(Mockito.any())).thenReturn(ResourceTestUtils.getCompteEntity());
-        Mockito.when(mapper.toCompteDto(Mockito.any())).thenReturn(ResourceTestUtils.getCompte());
-        assertThrows(RessourceAlreadyExistException.class,
+        Mockito.when(compteRepository.findById(Mockito.anyString())).thenReturn(Optional.of(compteEntity));
+        Mockito.when(mapper.toCompteDto(Mockito.any())).thenReturn(compteDto);
+        Mockito.when(mapper.toCompteEntity(Mockito.any())).thenReturn(compteEntity);
+
+        CompteDto compteDto = getCompte();
+        Assertions.assertThrows(RessourceAlreadyExistException.class,
                 () ->
-                        bankService.creerCompte(getCompte()));
+                        bankService.creerCompte(compteDto));
     }
 
     @Test
     void obtenirTousLesComptesTest() {
-        Mockito.when(compteRepository.findAll()).thenReturn(Arrays.asList(ResourceTestUtils.getCompteEntity()));
+        Mockito.when(compteRepository.findAll()).thenReturn(List.of(compteEntity));
         List<CompteDto> reponse = bankService.obtenirTousLesComptes();
         Assertions.assertNotNull(reponse);
     }
@@ -92,15 +96,14 @@ class BankServiceImplTest {
         operationCompteDto.setMontantOperation(5_000.0);
         operationCompteDto.setNumeroCompte(getCompte().getNumeroCompte());
 
-        Mockito.when(compteRepository.save(Mockito.any())).thenReturn(ResourceTestUtils.getCompteEntity());
-        Mockito.when(mapper.toCompteDto(Mockito.any())).thenReturn(ResourceTestUtils.getCompte());
-        Mockito.when(mapper.toCompteEntity(Mockito.any())).thenReturn(ResourceTestUtils.getCompteEntity());
-        Mockito.when(mapper.toOperationCompteEntity(Mockito.any())).thenReturn(ResourceTestUtils.getOperationCompteEntity());
+        Mockito.when(compteRepository.save(Mockito.any())).thenReturn(compteEntity);
+        Mockito.when(mapper.toCompteDto(Mockito.any())).thenReturn(compteDto);
+        Mockito.when(mapper.toCompteEntity(Mockito.any())).thenReturn(compteEntity);
+        Mockito.when(mapper.toOperationCompteEntity(Mockito.any())).thenReturn(operationCompteEntity);
         Mockito.when(mapper.toOperationCompteDto(Mockito.any())).thenReturn(operationCompteDto);
 
         bankService.creerCompte(getCompte());
-        Mockito.when(compteRepository.findById(Mockito.anyString())).thenReturn(Optional.of(ResourceTestUtils.getCompteEntity()));
-
+        Mockito.when(compteRepository.findById(Mockito.anyString())).thenReturn(Optional.of(compteEntity));
 
         CompteDto reponse = bankService.crediterOuDebiter(operationCompteDto);
         Assertions.assertNotNull(reponse);
@@ -110,7 +113,7 @@ class BankServiceImplTest {
     void crediterUnCompteQuiExistePasRenvoieException() {
         OperationCompteDto operationCompteDto = new OperationCompteDto();
         operationCompteDto.setMontantOperation(23_000.0);
-        assertThrows(RessourceNotFoundException.class,
+        Assertions.assertThrows(RessourceNotFoundException.class,
                 () ->
                         bankService.crediterOuDebiter(operationCompteDto));
     }
@@ -123,17 +126,17 @@ class BankServiceImplTest {
         operationCompteDto.setTypeOperation(TypeOperation.DEBIT);
         operationCompteDto.setNumeroCompte(getCompte().getNumeroCompte());
 
-        Mockito.when(compteRepository.save(Mockito.any())).thenReturn(ResourceTestUtils.getCompteEntity());
-        Mockito.when(mapper.toCompteDto(Mockito.any())).thenReturn(ResourceTestUtils.getCompte());
-        Mockito.when(mapper.toCompteEntity(Mockito.any())).thenReturn(ResourceTestUtils.getCompteEntity());
-        Mockito.when(mapper.toOperationCompteEntity(Mockito.any())).thenReturn(ResourceTestUtils.getOperationCompteEntity());
+        Mockito.when(compteRepository.save(Mockito.any())).thenReturn(compteEntity);
+        Mockito.when(mapper.toCompteDto(Mockito.any())).thenReturn(compteDto);
+        Mockito.when(mapper.toCompteEntity(Mockito.any())).thenReturn(compteEntity);
+        Mockito.when(mapper.toOperationCompteEntity(Mockito.any())).thenReturn(operationCompteEntity);
         Mockito.when(mapper.toOperationCompteDto(Mockito.any())).thenReturn(operationCompteDto);
 
         bankService.creerCompte(getCompte());
-        Mockito.when(compteRepository.save(Mockito.any())).thenReturn(ResourceTestUtils.getCompteEntity());
-        Mockito.when(compteRepository.findById(Mockito.anyString())).thenReturn(Optional.of(ResourceTestUtils.getCompteEntity()));
-        CompteDto reponse = bankService.crediterOuDebiter(operationCompteDto);
-        Assertions.assertNotNull(reponse);
+        Mockito.when(compteRepository.save(Mockito.any())).thenReturn(compteEntity);
+        Mockito.when(compteRepository.findById(Mockito.anyString())).thenReturn(Optional.of(compteEntity));
+        CompteDto response = bankService.crediterOuDebiter(operationCompteDto);
+        Assertions.assertNotNull(response);
     }
 
     @Test
@@ -141,7 +144,17 @@ class BankServiceImplTest {
         OperationCompteDto operationCompteDto = new OperationCompteDto();
         operationCompteDto.setMontantOperation(23_000.0);
         operationCompteDto.setNumeroCompte(getCompte().getNumeroCompte());
-        assertThrows(RessourceNotFoundException.class,
+        Assertions.assertThrows(RessourceNotFoundException.class,
+                () ->
+                        bankService.crediterOuDebiter(operationCompteDto));
+    }
+
+    @Test
+    void crediterOuDebiter_renvoieErreurSiMontantZero() {
+        OperationCompteDto operationCompteDto = new OperationCompteDto();
+        operationCompteDto.setMontantOperation(0.00);
+        operationCompteDto.setNumeroCompte(getCompte().getNumeroCompte());
+        Assertions.assertThrows(IncorrectOperationException.class,
                 () ->
                         bankService.crediterOuDebiter(operationCompteDto));
     }
@@ -152,21 +165,22 @@ class BankServiceImplTest {
         OperationCompteDto operationCompteDto = ResourceTestUtils.getOperationCompteDto();
         operationCompteDto.setNumeroCompte(getCompte().getNumeroCompte());
 
-        Mockito.when(compteRepository.save(Mockito.any())).thenReturn(ResourceTestUtils.getCompteEntity());
-        Mockito.when(mapper.toCompteDto(Mockito.any())).thenReturn(ResourceTestUtils.getCompte());
-        Mockito.when(mapper.toCompteEntity(Mockito.any())).thenReturn(ResourceTestUtils.getCompteEntity());
-        Mockito.when(mapper.toOperationCompteEntity(Mockito.any())).thenReturn(ResourceTestUtils.getOperationCompteEntity());
+        Mockito.when(compteRepository.save(Mockito.any())).thenReturn(compteEntity);
+        Mockito.when(mapper.toCompteDto(Mockito.any())).thenReturn(compteDto);
+        Mockito.when(mapper.toCompteEntity(Mockito.any())).thenReturn(compteEntity);
+        Mockito.when(mapper.toOperationCompteEntity(Mockito.any())).thenReturn(operationCompteEntity);
         Mockito.when(mapper.toOperationCompteDto(Mockito.any())).thenReturn(operationCompteDto);
 
         bankService.creerCompte(getCompte());
 
-        Mockito.when(compteRepository.save(Mockito.any())).thenReturn(ResourceTestUtils.getCompteEntity());
-        Mockito.when(compteRepository.findById(Mockito.anyString())).thenReturn(Optional.of(ResourceTestUtils.getCompteEntity()));
+        Mockito.when(compteRepository.save(Mockito.any())).thenReturn(compteEntity);
+        Mockito.when(compteRepository.findById(Mockito.anyString())).thenReturn(Optional.of(compteEntity));
 
         operationCompteDto.setTypeOperation(TypeOperation.DEBIT);
-        assertThrows(RetraitImpossibleException.class,
-                () ->
-                        bankService.crediterOuDebiter(operationCompteDto));
+
+        Assertions.assertTrue(compteEntity.getSolde() < operationCompteDto.getMontantOperation());
+        Assertions.assertThrows(RetraitImpossibleException.class,
+                () -> bankService.crediterOuDebiter(operationCompteDto));
     }
 
     @Test
@@ -177,10 +191,10 @@ class BankServiceImplTest {
         operationCompteDto.setNumeroCompte(getCompte().getNumeroCompte());
 
         Mockito.when(compteRepository.save(Mockito.any()))
-                .thenReturn(ResourceTestUtils.getCompteEntity());
-        Mockito.when(mapper.toCompteDto(Mockito.any())).thenReturn(ResourceTestUtils.getCompte());
-        Mockito.when(mapper.toCompteEntity(Mockito.any())).thenReturn(ResourceTestUtils.getCompteEntity());
-        Mockito.when(mapper.toOperationCompteEntity(Mockito.any())).thenReturn(ResourceTestUtils.getOperationCompteEntity());
+                .thenReturn(compteEntity);
+        Mockito.when(mapper.toCompteDto(Mockito.any())).thenReturn(compteDto);
+        Mockito.when(mapper.toCompteEntity(Mockito.any())).thenReturn(compteEntity);
+        Mockito.when(mapper.toOperationCompteEntity(Mockito.any())).thenReturn(operationCompteEntity);
         Mockito.when(mapper.toOperationCompteDto(Mockito.any())).thenReturn(operationCompteDto);
 
         CompteDto compteExpediteur = getCompte();
@@ -194,7 +208,7 @@ class BankServiceImplTest {
         compteExpediteur.setSolde(10_000.0);
         compteDestinataire.setSolde(3_000.0);
 
-        Mockito.when(compteRepository.findById(Mockito.anyString())).thenReturn(Optional.of(ResourceTestUtils.getCompteEntity()));
+        Mockito.when(compteRepository.findById(Mockito.anyString())).thenReturn(Optional.of(compteEntity));
         final CompteDto finalCompteDestinataire = compteDestinataire;
         final CompteDto finalCompteExpediteur = compteExpediteur;
         assertDoesNotThrow(
